# gita

./: .gitlab-ci.yml  Cargo.toml  MEMORY_MANAGER_PRODUCTION_REPORT.md  README.md  base-conf.yml  build.rs  build_test.sh  gat.md  grapgsage-introduce.md  test_runner.sh  validate_all_features.rs  validate_compilation.rs  validate_project.sh  verify_load_balancer.rs
.cargo/: config.toml
config/: default.toml  production.toml
cpp_plugins/: CMakeLists.txt  MIGRATION_GUIDE.md  README.md  build.sh
cpp_plugins/config/: plugin_config.json.in
cpp_plugins/examples/: plugin_example.cpp  production_test.cpp
cpp_plugins/include/: vibrate31_plugin.h
cpp_plugins/scripts/: deploy.sh
cpp_plugins/src/: data_types.cpp  decision_plugin_base.cpp  evaluation_plugin_base.cpp  event_plugin_base.cpp  feature_plugin_base.cpp  plugin_base.cpp  plugin_factories.cpp  plugin_manager.cpp  vibrate31_plugin.cpp
cpp_plugins/tests/: plugin_tests.cpp
docker/: Dockerfile  docker-compose.yml
docs/: README.md  api-layer-sequence.md  architecture-overview.md  build-optimization-guide.md  candle-integration-plan.md  ci-cd-executor-packages.md  ci-cd-guide.md  comprehensive-development-plan.md  executor-dependency-isolation-plan.md  ffi-layer-sequence.md  intelligent-scheduling-guide.md  kafka-ordering-analysis.md  ordered-window-processing-plan.md  python-wasm-integration-plan.md  scheduler-sequence.md  storage-sequence.md
examples/: README_REALTIME_STREAMING.md  containerized_algorithm_demo.rs  gc_performance_test.rs  realtime_streaming_config.json  realtime_streaming_example.rs  vibrate31_config.json  vibrate31_containerized_algorithm.rs  vibrate31_performance_benchmark.rs  youki_validation.rs
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml
k8s/: deployment.yaml
monitoring/: grafana-dashboard.json  prometheus.yml
plugins/matrix_multiplication_plugin/: CMakeLists.txt  README.md  build.sh  config.json  input_schema.json  output_schema.json
plugins/matrix_multiplication_plugin/src/: json_handler.cpp  json_handler.hpp  main.cpp  matrix_multiplication.cpp  matrix_multiplication_edge_optimized.cpp  matrix_multiplication_edge_optimized.hpp  performance_monitor.cpp  performance_monitor.hpp  version.hpp.in
rust-edge-compute/: Cargo.toml
rust-edge-compute-core/: Cargo.toml
rust-edge-compute-core/src/: lib.rs
rust-edge-compute-core/src/api/: auth_middleware.rs  container_handlers.rs  handlers.rs  mod.rs
rust-edge-compute-core/src/config/: mod.rs
rust-edge-compute-core/src/container/: algorithm_executor.rs  mod.rs  youki_manager.rs
rust-edge-compute-core/src/core/: audit.rs  encryption.rs  error.rs  executor_registry.rs  executor_trait.rs  integration_tests.rs  intelligent_scheduler.rs  logging.rs  metrics.rs  mod.rs  offset_tracker.rs  ordered_window_processor.rs  performance.rs  scheduler.rs  security.rs  tests.rs  updates.rs  window_aggregator.rs  zeromq_source.rs
rust-edge-compute-cpp/: Cargo.toml  build.rs
rust-edge-compute-cpp/src/: executor.rs  ffi.rs  lib.rs
rust-edge-compute-cpp/src/ffi/: cpp_bridge.cc  cpp_bridge.h  json_parser.cc  json_parser.h
rust-edge-compute-ml/: Cargo.toml
rust-edge-compute-ml/src/: device_manager.rs  executor.rs  inference.rs  lib.rs  model_manager.rs  postprocessing.rs  preprocessing.rs
rust-edge-compute-python/: Cargo.toml
rust-edge-compute-python/src/: executor.rs  lib.rs
rust-edge-compute-python/src/python/: dependency_manager.rs  mod.rs  model_loader.rs
rust-edge-compute-python/src/wasm/: mod.rs
rust-edge-compute/src/: main.rs
scripts/: package-executor.sh
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  routes.rs  server.rs
src/config/: mod.rs  settings.rs
src/container/: algorithm_executor.rs  mod.rs
src/core/: encryption.rs  error.rs  load_balancer.rs  logging.rs  performance.rs  persistence.rs  scheduler.rs  shutdown.rs  tls.rs  types.rs
src/ffi/: bridge.rs  exception_handler.rs  integration_example.rs  memory_manager.rs  mod.rs  performance_monitor.rs  type_converter.rs
src/ffi/cpp/: bridge.cc  bridge.h
src/streaming/: backpressure.rs  data_flow.rs  edge_optimization.rs  garbage_collector.rs  high_availability.rs  kafka_source.rs  metrics.rs  mod.rs  plugin_chain.rs  state_recovery.rs  stream_processor.rs
tests/: integration_test.rs
