# Workspace根配置
[workspace]
members = [
    "rust-edge-compute-core",
    "rust-edge-compute",
    "rust-edge-compute-cpp",
    "rust-edge-compute-ml",
    "rust-edge-compute-python",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Edge Compute Team"]
license = "MIT"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.0", features = ["full"] }
tokio-util = "0.7"

# Web框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# HTTP客户端
reqwest = { version = "0.11", features = ["json"] }

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 跨语言互操作
cxx = "1.0"

# 容器管理
oci-spec = "0.6"

# 系统调用
libc = "0.2"

# 容器运行时
tokio-process = "0.2"

# 配置管理
config = "0.14"
dotenvy = "0.15"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# 工具库
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.0"
lazy_static = "1.4"

# 数据库
sled = "0.34"
bincode = "1.3"

# 异步特质
async-trait = "0.1"

# 加密和安全
ring = "0.17"
base64 = "0.21"
rustls = "0.21"
rustls-pemfile = "1.0"
tokio-rustls = "0.24"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
hex = "0.4"

# 审计和监控
opentelemetry = "0.20"
opentelemetry-jaeger = "0.19"
tracing-opentelemetry = "0.21"

[workspace.dev-dependencies]
# 测试依赖
reqwest = { version = "0.11", features = ["json"] }
tokio-test = "0.4"

[workspace.build-dependencies]
cxx-build = "1.0"

[workspace.profile.release]
opt-level = 3
lto = true
codegen-units = 1
