[package]
name = "rust-edge-compute-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust Edge Compute Framework - Core Library"

[dependencies]
# 异步运行时
tokio = { workspace = true }
tokio-util = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 错误处理
thiserror = { workspace = true }
anyhow = { workspace = true }

# 工具库
uuid = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
fastrand = { workspace = true }
lazy_static = { workspace = true }

# 数据库（优化：只启用必要的 features）
sled = { workspace = true, default-features = false }
bincode = { version = "1.3", default-features = false }

# 异步特质
async-trait = { workspace = true }

# 日志
tracing = { workspace = true }

# 配置管理（优化：只启用必要的 features）
config = { workspace = true, default-features = false }
dotenvy = { workspace = true, default-features = false }

# 容器管理
oci-spec = { workspace = true }
tokio-process = { workspace = true }

# 加密和安全
ring = { workspace = true }
base64 = { workspace = true }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
tokio-rustls = { workspace = true }
aes-gcm = { workspace = true }
argon2 = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }

# 审计和监控（优化：只启用必要的 features）
# 注意：如果不需要监控功能，可以考虑移除这些依赖
opentelemetry = { workspace = true, default-features = false }
opentelemetry-jaeger = { workspace = true, default-features = false }
tracing-opentelemetry = { workspace = true, default-features = false }

# ZeroMQ 支持（使用异步 API）
zeromq = "0.5.0-pre"

[dev-dependencies]
tokio-test = "0.4"

