[package]
name = "rust-edge-compute-python"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust Edge Compute Framework - Python WASM Executor"

[lib]
name = "rust_edge_compute_python"
crate-type = ["cdylib", "rlib"]

[dependencies]
# 核心库
rust-edge-compute-core = { path = "../rust-edge-compute-core" }

# Python绑定
pyo3 = { version = "0.22", features = ["auto-initialize", "abi3-py311"], optional = true }

# Candle PyO3（使用外部依赖）
candle-pyo3 = { version = "0.9.2-alpha.1", optional = true }

# WASM运行时
wasmtime = { version = "15.0", features = ["async"], optional = true }
wasmtime-wasi = { version = "15.0", optional = true }

# 异步运行时
tokio = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 错误处理
anyhow = { workspace = true }
thiserror = { workspace = true }

# 日志
tracing = { workspace = true }

[build-dependencies]
pyo3-build-config = { version = "0.22", optional = true }
which = "4.4"

[features]
default = []
# Python支持
python = ["dep:pyo3", "dep:pyo3-build-config", "dep:candle-pyo3"]
# WASM支持
wasm = ["dep:wasmtime", "dep:wasmtime-wasi"]

